portfolio/style.css
body {
  font-family: Arial;
  background: linear-gradient(to right, #0f172a, #1e293b);
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.container {
  background: #111827;
  padding: 30px;
  border-radius: 12px;
  box-shadow: 0 0 20px rgba(0,0,0,0.5);
  text-align: center;
  width: 350px;
}
.profile {
  width: 120px;
  height: 120px;
  border-radius: 50%;
  margin-bottom: 15px;
  border: 3px solid #38bdf8;
}
.links a {
  margin: 10px;
  text-decoration: none;
  color: #38bdf8;
  font-weight: bold;
}
.projects {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.card {
  background: #1e293b;
  padding: 15px;
  border-radius: 10px;
  transition: 0.3s;
}

.card:hover {
  transform: scale(1.05);
}.container {
  animation: fadeIn 1.2s ease-in-out;
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}
@media (max-width: 600px) {
  .container {
    width: 90%;
    padding: 20px;
  }

  h1 {
    font-size: 22px;
  }
}

